Add ARINC665-4 compliance